istio-gateway-api-example/http-echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: mendhak/http-https-echo:38
          ports:
            - containerPort: 8080
